# Wan2GP

./: .dockerignore  .gitignore  .gitmodules  .yamllint  Dockerfile  Dockerfile.blackwell  Dockerfile.cu13  FluxMotion.md  LICENSE-Wan2GP.txt  LICENSE.txt  LTX_HYBRID_HOSTILE_REVIEW.md  Launch_WanGP.bat  License-Flash_Attention  README.md  STRUCTURE.md  Update.bat  __init__.py  batch_interactive.py  batch_interactive_v2.py  compose.yml  download_models.py  encoding.py  entrypoint.sh  extract_source_images.py  global_config.py  gradio_server.py  headless_model_management.py  headless_wgp.py  heartbeat_guardian.py  i2v_inference.py  install.bat  install.sh  install_miniconda.bat  launch.bat  lora_config.json.example  loras_url_cache.json  main.py  manage.bat  manage.sh  playback.py  (+29 more)
.github/: dependabot.yml
.github/workflows/: architecture-boundaries.yml  blackwell-kernels.yml  build-wangp-portable.yml  build-wangp-portable_python311_sage.yml  build-wangp-portable_sage.yml  docker-build-cu13.yml  docker-build.yml  main.yml  sage-wheels-cu13.yml  sage-wheels.yml  test-windows-install.yml  uv-lock-check.yml  wan2gp-drift.yml
Wan2GP/: wgp.py
Wan2GP/defaults/: ltx2_19B.json  ltx2_22B.json
Wan2GP/shared/: attention.py
debug/: README.md  analysis.py  cli.py  client.py  diagnostics.py  formatters.py  models.py  options.py  runtime_queries_system.py  runtime_queries_workers.py  task_queries.py
decord/: __init__.py
defaults/: ace_step_v1.json  ace_step_v1_5.json  ace_step_v1_5_turbo_lm_0_6b.json  ace_step_v1_5_turbo_lm_1_7b.json  ace_step_v1_5_turbo_lm_4b.json  alpha2_sf.json  bernini.json  chrono_edit.json  chrono_edit_distill.json  dramabox_audio.json  flux2_dev.json  flux2_dev_nvfp4.json  flux2_klein_4b.json  flux2_klein_9b.json  flux_chroma_radiance.json  frames2video.json  heartmula_oss_3b.json  heartmula_rl_oss_3b_20260123.json  hidream_o1.json  hidream_o1_dev.json  hunyuan_1_5_480_i2v_step_distilled.json  hunyuan_1_5_480_t2v_lightx2v.json  hunyuan_1_5_i2v.json  hunyuan_1_5_upsampler.json  hunyuan_1_5_upsampler_1080.json  i2v_2_2.json  i2v_2_2_Enhanced_Lightning_v2.json  i2v_2_2_Enhanced_Lightning_v2_svi2pro.json  i2v_nvfp4.json  ideogram4_nvfp4.json  index_tts2.json  joyai_echo.json  kiwi_edit.json  kiwi_edit_instruct_only.json  kiwi_edit_reference_only.json  krea2_raw.json  krea2_raw_edit.json  krea2_turbo.json  krea2_turbo_edit.json  kugelaudio_0_open.json  (+41 more)
docs/: AMD-INSTALLATION.md  API.md  CHANGELOG.md  CHARACTER_CONSISTENCY.md  CLI.md  DEEPY.md  FINETUNES.md  GETTING_STARTED.md  INSTALLATION.md  KIJAI_SVI_IMPLEMENTATION.md  LORAS.md  LORAS_advanced.md  LTX_MULTI_FRAME_TRAVEL.md  MODELS.md  MPS_MIGRATION_ANALYSIS.md  NVIDIA_INSTALLATION.md  OVERVIEW.md  PLUGINS.md  PROMPTS.md  RUNPOD-HOWTO.md  SETTINGS.md  SPATIAL_UPSAMPLERS.md  TROUBLESHOOTING.md  VACE.md  WAN2GP_FORK_MIGRATION_PLAN.md  WAN_2.2_ANIMATE.md  migration-baselines.md  wan2gp-rebase-runbook.md  wan2gp-triage.csv  worker-matrix-runner.md
examples/: _common.py  inpaint_frames_example.py  join_clips_example.py
flux/: flux_main.py  util.py
hyvideo/: config.py  constants.py  hunyuan.py
input/: Pull Me Under.prompts.characters.txt  Pull Me Under.prompts.extended.txt  Pull Me Under.prompts.txt  Pull Me Under.txt  first-shot.json
locales/: en.json  ru.json
loras/: readme.txt
loras_flux2/: readme.txt
ltx_video/: ltxv.py
models/: _settings.json  model_metadata.py
notebooks/: wan2gp_character_consistency_runpod.ipynb
postprocessing/: film_grain.py  spatial_upsamplers.py  temporal_upsamplers.py  upsamplers.py
preprocessing/: canny.py  extract_vocals.py  face_preprocessor.py  flow.py  gray.py  scribble.py  speakers_separator.py
scripts/: __init__.py  autoinstaller.bat  autoinstaller.sh  create_test_task.py  extract_i18n_strings.py  i18n_audit.json  i18n_wrap.py  install.bat  install.sh  persisted_row_replay.py  run_worker_matrix.py  section3a_matrix.py  section3a_matrix_smoke.py  start-chrome-no-gpu.bat  start-chrome-no-gpu.sh  uni3c_validation.py  update.bat  worker_matrix_cases.json  worker_matrix_db_snapshots.json
shared/: RGB_factors.py  agents_engine.py  api.py  api_cli.py  api_webui.py  asyncio_utils.py  attention.py  cli_args.py  device_patch.py  extra_settings.py  extract_lora.py  ffmpeg_setup.py  i18n.py  loras_migration.py  match_archi.py  model_dropdowns.py  prompt_relay.py  resolutions.py  sage2_core.py
smplfitter/: __init__.py  pt.py
source/: __init__.py  db_operations.py
tasks/: canary-rollback-worker.md
tests/: test_additional_coverage_modules.py  test_architecture_boundaries.py  test_clear_conditioning_byte_identity.py  test_control_preprocessing_and_continuity.py  test_db_runtime_contracts.py  test_download_utils_file_url.py  test_generation_policy.py  test_idle_release.py  test_join_orchestrator_and_registry.py  test_join_orchestrator_loop_reverse.py  test_local_http.py  test_local_http_lifecycle.py  test_lora_module_manifest.py  test_lora_sanitizer.py  test_ltx_hybrid_travel.py  test_model_download_progress.py  test_pose_preprocessor.py  test_predecessor_resolver.py  test_prompt_expansion.py  test_qwen_model_selection.py  test_runtime_model_patch_contracts.py  test_task_registry_ic_lora_dedup.py  test_task_status_split_modules.py  test_template_routing.py  test_transition_prompt_api_contracts.py  test_travel_guidance_config.py  test_travel_guidance_ic_lora_override.py  test_travel_ltx_vpt.py  test_vibecomfy_adapter.py  test_vibecomfy_backend_selection.py  test_video_contract.py  test_vlm_caller_service_integration.py  test_wgp_patch_context_contracts.py  test_wgp_patch_lifecycle.py
videoeditor/: main.py  plugins.py
wgp_fastapi/: __init__.py  pyproject.toml  upscaler.py
wgp_fastapi/api/: __init__.py  routes.py
wgp_fastapi/models/: __init__.py  flux_image.py  i2v.py  krea_image.py  magic_mask.py  prompt_enhance.py
wgp_fastapi/services/: prompt_enhance.py
workflows/: build-wangp-portable.yml
(+1061 files in other folders)
