[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
worker = "source.runtime.entrypoints.worker:main"
run_worker = "source.runtime.entrypoints.run_worker:main"
heartbeat_guardian = "source.runtime.entrypoints.heartbeat_guardian:main"
headless_model_management = "source.runtime.entrypoints.headless_model_management:main"
headless_wgp = "source.runtime.entrypoints.headless_wgp:WanOrchestrator"

[tool.headless_wan2gp.entrypoints]
worker = "source.runtime.entrypoints.worker:main"
run_worker = "source.runtime.entrypoints.run_worker:main"
heartbeat_guardian = "source.runtime.entrypoints.heartbeat_guardian:main"
headless_model_management = "source.runtime.entrypoints.headless_model_management:main"
headless_wgp = "source.runtime.entrypoints.headless_wgp:WanOrchestrator"

[tool.headless_wan2gp.deprecation]
db_operations_remove_ready = false
db_operations_warning_date = "2026-12-31"
