[project]
name = "wan2gp-fastapi"
version = "1.0.0"
description = "FastAPI wrapper for Wan2GP-api"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "Pillow>=12.2.0",
    "pillow-heif>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["wgp_fastapi"]

[tool.uv]
dev-dependencies = []